--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
                     <div class="row justify-content-center">
                         <div class="col-lg-4">
-                            <h5>Company Name</h5>
+                            <h5>The ICT Hub</h5>
                         </div>
                         <div class="col-lg-4">
                             <h6>Software Engineer</h6>
@@ -544,7 +544,7 @@
                         </div>
                     </div>
                 </div>
-                
+
 
 
             </div>
