--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-6">
-                    <div class="shadow-lg p-1 rounded" style="width: 400px;margin-left: 50px;">
+                    <div class="shadow-lg p-1 rounded" style="width: 400px;">
                         <img src="images/musfiq raihan.jpg" width="393px;" alt="">
                     </div>
                 </div>
