--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <div class="text-center about-detail mx-auto mt-5">
                         <h1 class="mb-3">Hi! <span class="font-weight-bold text-custom">I'M Musfiq Raihan.</span>
                         </h1>
-                        <h3 style="margin-top:-13px;">Software Engineer</h3>
+                        <h3 style="margin-top:-13px;">Software Developer</h3>
                         <h3><span class="font-weight-bold text-custom">With</span></h3>
 
                         <ul class="mb-0 list-inline text-center about-work">
@@ -99,8 +99,8 @@
                             <li class="list-inline-item mr-0 text-muted">Javascript</li>
                             <li class="list-inline-item mr-0 text-muted">PHP</li>
                         </ul>
-                        <p class="text-muted mt-3">I am an experienced Software Engineer with a demonstrated
-                            history of working in the Computer Software industry. Skilled in Python, PHP,
+                        <p class="text-muted mt-3">As a software developer, I worked in the Computer Software industry.
+                            Skilled in Python, PHP,
                             JavaScript, Project Management. Strong engineering professional with a Bachelor’s
                             degree focused on Computer Science.</p>
 
@@ -146,38 +146,11 @@
             <div class="row justify-content-center">
 
                 <div class="col-lg-6 mt-5">
-                    <h1>As a result of all my good qualities, I am a hard worker, flexible,
-                        co-operative, good in manners, and very professional in my profession.</h1>
+                    <h2>As a result of all my good qualities, I am a hard worker, flexible,
+                        co-operative, good in manners, and very professional in my profession.</h2>
                 </div>
 
                 <div class="col-lg-6 mt-5">
-
-                    <div class="row justify-content-center">
-                        <div class="col-lg-4">
-                            <h5>The ICT Hub</h5>
-                        </div>
-                        <div class="col-lg-4">
-                            <h6>Software Engineer</h6>
-                            <p class="text-muted">Custom web application,
-                                Project management</p>
-                        </div>
-                        <div class="col-lg-4">
-                            <h6>Present</h6>
-                        </div>
-                    </div>
-
-                    <div class="row justify-content-center mt-5">
-                        <div class="col-lg-4">
-                            <h5>Freelancer</h5>
-                        </div>
-                        <div class="col-lg-4">
-                            <h6>FIVERR</h6>
-                            <p class="text-muted">Web application</p>
-                        </div>
-                        <div class="col-lg-4">
-                            <h6>Part time</h6>
-                        </div>
-                    </div>
 
                     <div class="row justify-content-center mt-5">
                         <div class="col-lg-4">
@@ -224,7 +197,7 @@
 
                 <div class="col-lg-6 mb-5 mt-4">
                     <h3>My skills are primarily based on Development, Design, and Deployment.
-                        My programming &nbsp;&nbsp; basic is mainly on C, C++, and PHP.</h3>
+                        My programming &nbsp;&nbsp; basic is mainly on C, python, and PHP.</h3>
                 </div>
 
 
@@ -232,10 +205,10 @@
                     <div class="progress-bars skill-custom">
                         <div class="clearfix">
                             <div class="text-dark font-weight-bold float-left">DEVELOPMENT</div>
-                            <div class="text-muted float-right">85%</div>
+                            <div class="text-muted float-right">75%</div>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="0"
+                            <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="0"
                                 aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                         <div class="clearfix">
@@ -248,10 +221,10 @@
                         </div>
                         <div class="clearfix">
                             <div class="text-dark font-weight-bold float-left">DEPLOYMENT</div>
-                            <div class="text-muted float-right">78%</div>
+                            <div class="text-muted float-right">68%</div>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" style="width:78%" aria-valuenow="0"
+                            <div class="progress-bar" role="progressbar" style="width:68%" aria-valuenow="0"
                                 aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
@@ -584,18 +557,10 @@
                         </div>
                         <div class="mt-2">
                             <p class="mb-0 font-weight-bold">Email Me At</p>
-                            <p class="text-muted">musfiqak@gmail.com</p>
+                            <p class="text-muted">musfiq.raihan.8@gmail.com</p>
                         </div>
                     </div>
-                    <div class="text-center mt-4">
-                        <div>
-                            <i class="mbri-pin text-custom h2"></i>
-                        </div>
-                        <div class="mt-2">
-                            <p class="mb-0 font-weight-bold">Visit Office</p>
-                            <p class="text-muted">Opening Soon</p>
-                        </div>
-                    </div>
+
                 </div>
                 <div class="col-lg-8">
                     <div class="contact_form">
